-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.2
-
Win 7
-
1c1cce67fa1d03a49cdfb6f1ca378b182925ffdb
Attached application simulates some heavy processing by using Sleep(1000) and it causes double valueChanged signal.
Steps:
-Build and run the example application
-Press scrollbar to right once
-Close the application and check the hit count(printed via qDebug)
Actual result:
-Hit count is 2
Expected result:
-Hit count is 1